compass working with /css route. project_path and sass_dir configuration can't work!?

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,8 @@
 # Title and subheading for your site. Used on the home page and in page
 # titles.
 #
-title: "My Site"
-subtitle: "(change this text in config/config.yml)"
+title: "T_T"
+subtitle: "~_~"
 
 # You should really specify your content's author when generating an
 # Atom feed. Specify at least one of name, uri or email, and Nesta will
@@ -62,6 +62,6 @@ content: content
 # Don't forget to uncomment the "production:" line too...
 
 # production:
-#   cache: true    
+#   cache: true
 #   content: /var/apps/nesta/shared/content
 #   google_analytics_code: "UA-???????-?"
