--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,8 @@
 # Title and subheading for your site. Used on the home page and in page
 # titles.
 #
-title: "T_T"
-subtitle: "~_~"
+title: "IJOYE"
+subtitle: "a collection of selected things <i>by</i> <em>puttiz</em>"
 
 # You should really specify your content's author when generating an
 # Atom feed. Specify at least one of name, uri or email, and Nesta will
@@ -62,6 +62,6 @@ content: content
 # Don't forget to uncomment the "production:" line too...
 
 # production:
-#   cache: true
-#   content: /var/apps/nesta/shared/content
+#   cache: false
+#   content: content
 #   google_analytics_code: "UA-???????-?"
