--- a/config/config.yml
+++ b/config/config.yml
@@ -19,7 +19,7 @@ subtitle: "a collection of selected things <i>by</i> <em>puttiz</em>"
 # easy to create or install, and live inside the themes directory. You
 # can also use scripts/theme to install them.
 #
-theme: llex
+# theme: llex
 
 # If you want to use the Disqus service (http://disqus.com) to display
 # comments on your site, register a Disqus account and then specify your
